# openwrt-packages

./: README.md
apr-util/: Makefile
expat/: Makefile
git/: Makefile
hellorust/: Makefile
hellorust/src/: CMakeLists.txt  hellorust.rs
libuv/: Makefile  readme.txt
libuv/src/: CMakeLists.txt
libuv/src/include/: uv-linux.h
libuv/src/src/: uv-common.c
libuv/src/src/unix/: core.c  internal.h  udp.c
luci-app-phddns/: Makefile  Makefile~
luci-app-phddns/lang/: phddns.zh-cn.po  phddns.zh-cn.po~
luci-app-phddns/luasrc/controller/: phddns.lua  phddns.lua~
luci-app-phddns/luasrc/model/cbi/admin_services/: phddns.lua  phddns.lua~  subversion.lua~  vlmcsd.lua~
luci/patches/: 001-change-default-conf.patch  200-patch-ralink-wifi.patch  201-pack-mtk-wifidev.patch
mosquitto/: Makefile  README.md
mosquitto/patches/: 102-disable-srv.patch
neon/: Makefile
phddns/: Makefile
phddns/files/etc/init.d/: phddns
phddns/patches/: 001-chang-log-to-stdout.patch  001-output_status.patch
rust/: Makefile  README.md
rust/patches/: 001-append-mipsel-linux.patch
sqlite3/: Makefile
subversion/: Makefile
tengine/: Makefile
vlmcsd/: Makefile  README.md
vlmcsd/files/etc/config/: vlmcsd
vlmcsd/files/etc/init.d/: vlmcsd
vlmcsd/src/: CMakeLists.txt  config.h  crypto.c  crypto.h  crypto_internal.c  crypto_internal.h  crypto_openssl.c  crypto_openssl.h  crypto_polarssl.h  endian.c  endian.h  helpers.c  helpers.h  kms.c  kms.h  network.c  network.h  ns_name.h  ntservice.c  ntservice.h  output.c  output.h  rpc.c  rpc.h  shared_globals.c  shared_globals.h  types.h  vlmcs.c  vlmcs.h  vlmcsd.c  vlmcsd.h  vlmcsdmulti.c
wsapi/: Makefile
